# nanofuse

./: README.md  pyproject.toml
notebooks/: collect_data.py  imu_test.ipynb  preprocess_data.py  train_model.py
sim/: Dockerfile  circle_pub.bash  docker-compose.yaml  inference_node.py  random_walk.bash  requirements.txt  robot.sdf  ros_gz_bridge.launch.py  ros_local_bridge.py
